Add preflight CSS reset

--- a/index.html
+++ b/index.html
@@ -2,12 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
-    <link rel="stylesheet" href="/src/main.css" />
-    <title>Let's fly</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/favicon.svg"
+    />
+    <link
+      rel="stylesheet"
+      href="/src/preflight-dist.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/src/main.css"
+    />
+    <title>Private Jet</title>
   </head>
   <body>
-    <div id="app"></div>
+    <header class="header">
+      <a
+        href="/"
+        class="logo"
+      >
+        LetsFly
+      </a>
+      <nav class="menu">
+        <ul>
+          <li><a href="#">Intro</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Costs</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">FAQ</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
