Convert main.css to SCSS and extract variables file

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     />
     <link
       rel="stylesheet"
-      href="/src/preflight-dist.css"
+      href="/src/styles/preflight-dist.css"
     />
     <link
       rel="stylesheet"
-      href="/src/main.css"
+      href="/src/styles/main.scss"
     />
     <title>Private Jet</title>
   </head>
