Replace minified preflight with readable version

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link
       rel="stylesheet"
-      href="/src/styles/preflight-dist.css"
+      href="/src/styles/preflight.css"
     />
     <link
       rel="stylesheet"
