Add styles for welcome section and buttons

--- a/index.html
+++ b/index.html
@@ -39,5 +39,12 @@
         </ul>
       </nav>
     </header>
+
+    <main class="welcome">
+      <div class="welcome__cta">
+        <button class="btn">Learn more</button>
+        <button class="btn btn--primary">Let's Fly</button>
+      </div>
+    </main>
   </body>
 </html>
