--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <title>Private Jet</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header container">
       <a
         href="/"
-        class="logo"
+        class="header__logo"
       >
         LetsFly
       </a>
-      <nav class="menu">
+      <nav class="header__menu">
         <ul>
           <li><a href="#">Intro</a></li>
           <li><a href="#">About</a></li>
@@ -40,11 +40,24 @@
       </nav>
     </header>
 
-    <main class="welcome">
-      <div class="welcome__cta">
-        <button class="btn">Learn more</button>
-        <button class="btn btn--primary">Let's Fly</button>
+    <main class="welcome container">
+      <div class="welcome__information">
+        <div class="welcome__sub-text">Personal jets</div>
+        <h1 class="welcome__title">Luxury.<br />Affordable.</h1>
+        <div class="welcome__description">
+          We believe loyalty should be rewarded.
+        </div>
+
+        <div class="welcome__cta">
+          <button class="btn">Learn more</button>
+          <button class="btn btn--primary">Let's Fly</button>
+        </div>
       </div>
+
+      <img
+        class="welcome__plane"
+        src="/images/06.png"
+      />
     </main>
   </body>
 </html>
