--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <img
         class="welcome__plane"
-        src="/images/06.png"
+        src="/images/plane/06.png"
       />
     </main>
   </body>
