Add cloud images and mission section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </nav>
     </header>
 
-    <main class="welcome container">
+    <section class="welcome">
       <div class="welcome__information">
         <div class="welcome__sub-text">Personal jets</div>
         <h1 class="welcome__title">Luxury.<br />Affordable.</h1>
@@ -58,6 +58,19 @@
         class="welcome__plane"
         src="/images/plane/06.png"
       />
-    </main>
+
+      <div class="welcome__bg-clouds">
+        <img src="/images/clouds/left-cloud.png" />
+        <img src="/images/clouds/main-cloud.png" />
+        <img src="/images/clouds/right-cloud.png" />
+      </div>
+    </section>
+
+    <div class="mission">
+      <div>One simple fly rate.</div>
+      <div>A discount that gets better and better.</div>
+      <div>Apply in minutes.</div>
+      <div>Built for rich people.</div>
+    </div>
   </body>
 </html>
