Add luxury-flights section and update styles

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         href="/"
         class="header__logo"
       >
-        LetsFly
+        Let's Fly
       </a>
       <nav class="header__menu">
         <ul>
@@ -42,14 +42,15 @@
 
     <section class="welcome">
       <div class="welcome__information">
-        <div class="welcome__sub-text">Personal jets</div>
-        <h1 class="welcome__title">Luxury.<br />Affordable.</h1>
-        <div class="welcome__description">
-          We believe loyalty should be rewarded.
-        </div>
+        <div class="sub-title">Personal jets</div>
+        <h1 class="welcome__title">
+          <span>Luxury.</span>
+          <span>Affordable.</span>
+        </h1>
+        <div class="description">We believe loyalty should be rewarded.</div>
 
         <div class="welcome__cta">
-          <button class="btn">Learn more</button>
+          <button class="btn btn--gray">Learn more</button>
           <button class="btn btn--primary">Let's Fly</button>
         </div>
       </div>
@@ -66,11 +67,32 @@
       </div>
     </section>
 
-    <div class="mission">
+    <section class="mission">
       <div>One simple fly rate.</div>
       <div>A discount that gets better and better.</div>
       <div>Apply in minutes.</div>
       <div>Built for rich people.</div>
-    </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="sub-title">EXPERIENCE OUR</div>
+        <h2 class="section-title">
+          <div>Luxury</div>
+          Flights.
+        </h2>
+        <div class="description section__description">
+          Experience unmatched luxury in the skies. Our private jets offer
+          top-fier comfort, personalized service, and exquisite amenities for
+          every journey.
+        </div>
+        <button class="btn btn--gray">Book now</button>
+      </div>
+      <img
+        class="luxury-flights__image"
+        src="/images/plane/05.png"
+        alt=""
+      />
+    </section>
   </body>
 </html>
