Add loyalty section

--- a/index.html
+++ b/index.html
@@ -94,5 +94,34 @@
         alt=""
       />
     </section>
+
+    <section class="loyalty">
+      <div class="container">
+        <div class="loyalty__top">
+          <div class="sub-title">SEAMIESSI</div>
+          <h2 class="section-title">
+            <div>Instantly</div>
+            Booked.
+          </h2>
+        </div>
+        <img
+          class="loyalty__image"
+          src="/images/plane/loalty-plane.png"
+          alt=""
+        />
+        <div class="loyalty__bottom">
+          <h3 class="loyalty__bottom--title">Every. Single. Year.</h3>
+          <div
+            class="loyalty__bottom--description description section__description"
+          >
+            Enjoy new, exclusive perks and benefits every single year with our
+            luxury flight services.<br /><br />
+            We believe lovely should be rewarded.
+
+            <button class="btn btn--gray">Get Started</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
