Add costs section and update styles

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div>Built for rich people.</div>
     </section>
 
-    <section>
+    <section class="luxury-flights">
       <div class="container">
         <div class="sub-title">EXPERIENCE OUR</div>
         <h2 class="section-title">
@@ -83,7 +83,7 @@
         </h2>
         <div class="description section__description">
           Experience unmatched luxury in the skies. Our private jets offer
-          top-fier comfort, personalized service, and exquisite amenities for
+          top-tier comfort, personalized service, and exquisite amenities for
           every journey.
         </div>
         <button class="btn btn--gray">Book now</button>
@@ -98,7 +98,7 @@
     <section class="loyalty">
       <div class="container">
         <div class="loyalty__top">
-          <div class="sub-title">SEAMIESSI</div>
+          <div class="sub-title">SEAMLESSLY</div>
           <h2 class="section-title">
             <div>Instantly</div>
             Booked.
@@ -110,15 +110,49 @@
           alt=""
         />
         <div class="loyalty__bottom">
-          <h3 class="loyalty__bottom--title">Every. Single. Year.</h3>
+          <h3 class="section-bottom-title">Every. Single. Year.</h3>
           <div
-            class="loyalty__bottom--description description section__description"
+            class="section-bottom-description description section__description"
           >
             Enjoy new, exclusive perks and benefits every single year with our
             luxury flight services.<br /><br />
-            We believe lovely should be rewarded.
+            We believe loyalty should be rewarded.
+          </div>
+          <button class="btn">Get Started</button>
+        </div>
+      </div>
+    </section>
 
-            <button class="btn btn--gray">Get Started</button>
+    <section class="costs">
+      <div class="container">
+        <div class="costs__sub-heading">Insanely Low</div>
+        <h2 class="costs__heading">Costs.</h2>
+        <img
+          class="costs__image"
+          src="/images/plane/03.png"
+          alt=""
+        />
+
+        <div class="costs__bottom">
+          <div class="costs__bottom-left">
+            <h3 class="section-bottom-title">Personal Discounts.</h3>
+            <div
+              class="costs__bottom-description section-bottom-description description section__description"
+            >
+              Unlock tailored savings just for you. Exclusive personal
+              discounts on our luxury private jet services.
+            </div>
+            <div class="costs__bottom-buttons">
+              <button class="btn btn--gray">Learn more</button>
+              <button class="btn">Get Started</button>
+            </div>
+          </div>
+          <div class="costs__bottom-right">
+            <div>
+              <div>5.25</div>
+              <div><span>%</span><span>PA</span></div>
+            </div>
+            <div>Estimated Rate*</div>
           </div>
         </div>
       </div>
