Add apply section

--- a/index.html
+++ b/index.html
@@ -157,5 +157,66 @@
         </div>
       </div>
     </section>
+
+    <section class="apply">
+      <div class="apply__grid">
+        <div class="apply__empty-wrapper">
+          <div class="apply__empty"></div>
+          <div class="apply__empty"></div>
+        </div>
+
+        <div class="apply__main">
+          <div class="apply__card apply__card--top">
+            <span class="apply__title"> Apply in minutes. </span>
+            <button class="btn btn--gray">Learn more</button>
+            <img
+              class="apply__first-plane non-select-image"
+              src="/images/plane/apply.png"
+              alt=""
+            />
+          </div>
+
+          <div class="apply__row">
+            <div class="apply__card apply__card--left">
+              <img
+                class="apply__second-plane non-select-image"
+                src="/images/plane/apply-2.png"
+                alt=""
+              />
+              <div class="apply__title apply__title--light">
+                Backed by American's leading airlines.
+              </div>
+              <button class="btn btn--premium">Learn more</button>
+            </div>
+
+            <div class="apply__card apply__card--right">
+              <div class="apply__chat">
+                <div class="apply__message apply__message--user">
+                  Nice. How can I switch to Let's Fly?
+                </div>
+                <div class="apply__message apply__message--system">
+                  Tap the 'Refinance Now' button to get started. If you have
+                  any questions, I'm here to help.
+                </div>
+                <div class="apply__message apply__message--user">
+                  👍 All done!
+                </div>
+              </div>
+              <div class="apply__support">
+                <div class="apply__title">
+                  Got a question?<br />We're here to help.
+                </div>
+                <button class="btn btn--gray">Chat with us</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="apply__empty-wrapper">
+          <div class="apply__empty"></div>
+          <div class="apply__empty"></div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
