Implement accordion logic

--- a/index.html
+++ b/index.html
@@ -228,77 +228,165 @@
 
         <div>
           <div class="faq__item">
-            <button class="faq__question">Are there really no fees?</button>
-            <div class="faq__answer">
-              Yes, there are no setup or monthly account fees.
+            <div class="faq__header">
+              <input
+                type="checkbox"
+                class="faq__toggle"
+              />
+              <span class="faq__question">Are there really no fees?</span>
+              <span class="faq__sign"></span>
+            </div>
+            <div class="faq__body">
+              <div class="faq__content">
+                <div class="faq__answer">
+                  Yes, there are no setup or monthly account fees.
+                </div>
+              </div>
             </div>
           </div>
 
           <div class="faq__item">
-            <button class="faq__question">
-              How does Let's Fly annual discount bump work?
-            </button>
-            <div class="faq__answer">
-              You get an interest rate discount each year you stay with us, up
-              to 5 years.
+            <div class="faq__header">
+              <input
+                type="checkbox"
+                class="faq__toggle"
+              />
+              <span class="faq__question"
+                >How does Let's Fly annual discount bump work?</span
+              >
+              <span class="faq__sign"></span>
+            </div>
+            <div class="faq__body">
+              <div class="faq__content">
+                <div class="faq__answer">
+                  You get an interest rate discount each year you stay with us,
+                  up to 5 years.
+                </div>
+              </div>
             </div>
           </div>
 
           <div class="faq__item">
-            <button class="faq__question">Am I eligible for Let's Fly?</button>
-            <div class="faq__answer">
-              You must be 18+, an Australian resident, and meet credit
-              criteria.
+            <div class="faq__header">
+              <input
+                type="checkbox"
+                class="faq__toggle"
+              />
+              <span class="faq__question">Am I eligible for Let's Fly?</span>
+              <span class="faq__sign"></span>
+            </div>
+            <div class="faq__body">
+              <div class="faq__content">
+                <div class="faq__answer">
+                  You must be 18+, an Australian resident, and meet credit
+                  criteria.
+                </div>
+              </div>
             </div>
           </div>
 
           <div class="faq__item">
-            <button class="faq__question">
-              What does the application process look like?
-            </button>
-            <div class="faq__answer">
-              Apply online in under 10 minutes. Get a decision within 1–2
-              business days.
+            <div class="faq__header">
+              <input
+                type="checkbox"
+                class="faq__toggle"
+              />
+              <span class="faq__question"
+                >What does the application process look like?</span
+              >
+              <span class="faq__sign"></span>
+            </div>
+            <div class="faq__body">
+              <div class="faq__content">
+                <div class="faq__answer">
+                  Apply online in under 10 minutes. Get a decision within 1–2
+                  business days.
+                </div>
+              </div>
             </div>
           </div>
 
           <div class="faq__item">
-            <button class="faq__question">
-              What is Let's Fly relationship to CommBank?
-            </button>
-            <div class="faq__answer">
-              Let's Fly is an independent platform, backed by CommBank for
-              security and trust.
+            <div class="faq__header">
+              <input
+                type="checkbox"
+                class="faq__toggle"
+              />
+              <span class="faq__question"
+                >What is Let's Fly relationship to CommBank?</span
+              >
+              <span class="faq__sign"></span>
+            </div>
+            <div class="faq__body">
+              <div class="faq__content">
+                <div class="faq__answer">
+                  Let's Fly is an independent platform, backed by CommBank for
+                  security and trust.
+                </div>
+              </div>
             </div>
           </div>
 
           <div class="faq__item">
-            <button class="faq__question">
-              Can I offset interest in my Let's Fly account?
-            </button>
-            <div class="faq__answer">
-              Yes, eligible accounts include a 100% offset feature.
+            <div class="faq__header">
+              <input
+                type="checkbox"
+                class="faq__toggle"
+              />
+              <span class="faq__question"
+                >Can I offset interest in my Let's Fly account?</span
+              >
+              <span class="faq__sign"></span>
+            </div>
+            <div class="faq__body">
+              <div class="faq__content">
+                <div class="faq__answer">
+                  Yes, eligible accounts include a 100% offset feature.
+                </div>
+              </div>
             </div>
           </div>
 
           <div class="faq__item">
-            <button class="faq__question">
-              How does Let's Fly make sure my data and personal information is
-              safe?
-            </button>
-            <div class="faq__answer">
-              We use bank-grade encryption and secure cloud infrastructure to
-              protect your data.
+            <div class="faq__header">
+              <input
+                type="checkbox"
+                class="faq__toggle"
+              />
+              <span class="faq__question"
+                >How does Let's Fly make sure my data and personal information
+                is safe?</span
+              >
+              <span class="faq__sign"></span>
+            </div>
+            <div class="faq__body">
+              <div class="faq__content">
+                <div class="faq__answer">
+                  We use bank-grade encryption and secure cloud infrastructure
+                  to protect your data.
+                </div>
+              </div>
             </div>
           </div>
 
           <div class="faq__item">
-            <button class="faq__question">
-              What if I need to get in touch with someone?
-            </button>
-            <div class="faq__answer">
-              Contact our support team via chat, email or phone — 24/7
-              availability.
+            <div class="faq__header">
+              <input
+                type="checkbox"
+                class="faq__toggle"
+              />
+              <span class="faq__question"
+                >What if I need to get in touch with someone?</span
+              >
+              <span class="faq__sign"></span>
+            </div>
+            <div class="faq__body">
+              <div class="faq__content">
+                <div class="faq__answer">
+                  Contact our support team via chat, email or phone — 24/7
+                  availability.
+                </div>
+              </div>
             </div>
           </div>
         </div>
