Remove unused images

--- a/index.html
+++ b/index.html
@@ -89,9 +89,18 @@
           />
 
           <div class="welcome__bg-clouds">
-            <img src="/images/clouds/left-cloud.png" />
-            <img src="/images/clouds/main-cloud.png" />
-            <img src="/images/clouds/right-cloud.png" />
+            <img
+              src="/images/clouds/left-cloud.png"
+              class="fade-in"
+            />
+            <img
+              src="/images/clouds/main-cloud.png"
+              class="fade-in"
+            />
+            <img
+              src="/images/clouds/right-cloud.png"
+              class="right-fade-in"
+            />
           </div>
         </main>
 
