Add animations and refactor styles

--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
         </header>
 
         <main class="welcome">
-          <div
-            class="welcome__information zoom-in-fade-in will-change-transform"
-          >
+          <div class="welcome__information zoom-in-fade-in">
             <div class="sub-title">Personal jets</div>
             <h1 class="welcome__title">
               <span>Luxury.</span>
@@ -111,7 +109,7 @@
           <div>Built for rich people.</div>
         </section>
 
-        <section class="luxury-flights">
+        <section class="luxury">
           <div class="container">
             <div class="sub-title">EXPERIENCE OUR</div>
             <h2 class="section-title">
@@ -126,9 +124,8 @@
             <button class="btn btn--gray">Book now</button>
           </div>
           <img
-            class="luxury-flights__image"
             src="/images/plane/05.png"
-            alt=""
+            class="luxury__image"
           />
         </section>
 
@@ -144,7 +141,6 @@
             <img
               class="loyalty__image"
               src="/images/plane/loalty-plane.png"
-              alt=""
             />
             <div class="loyalty__bottom">
               <h3 class="section-bottom-title">Every. Single. Year.</h3>
@@ -162,12 +158,11 @@
 
         <section class="costs">
           <div class="container">
-            <div class="costs__sub-heading">Insanely Low</div>
-            <h2 class="costs__heading">Costs.</h2>
+            <div class="costs__sub-heading fade-in">Insanely Low</div>
+            <h2 class="costs__heading fade-in">Costs.</h2>
             <img
               class="costs__image"
               src="/images/plane/03.png"
-              alt=""
             />
 
             <div class="costs__bottom">
@@ -209,7 +204,6 @@
                 <img
                   class="apply__first-plane non-select-image"
                   src="/images/plane/apply.png"
-                  alt=""
                 />
               </div>
 
@@ -218,7 +212,6 @@
                   <img
                     class="apply__second-plane non-select-image"
                     src="/images/plane/apply-2.png"
-                    alt=""
                   />
                   <div class="apply__title apply__title--light">
                     Backed by American's leading airlines.
@@ -257,7 +250,7 @@
         </section>
 
         <section class="faq">
-          <div class="container faq__container">
+          <div class="faq__container">
             <h2 class="faq__title">
               In case you<br />
               missed anything.
@@ -393,8 +386,8 @@
                     class="faq__toggle"
                   />
                   <span class="faq__question"
-                    >How does Let's Fly make sure my data and personal
-                    information is safe?</span
+                    >How does Let’s Fly keep my data and personal information
+                    safe?</span
                   >
                   <span class="faq__sign"></span>
                 </div>
