Add responsive design for entire project

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
           </div>
 
           <img
-            class="welcome__plane"
             src="/images/plane/06.png"
+            class="welcome__plane"
           />
 
           <div class="welcome__bg-clouds">
@@ -148,8 +148,12 @@
               </h2>
             </div>
             <img
-              class="loyalty__image"
               src="/images/plane/loalty-plane.png"
+              class="loyalty__plane"
+            />
+            <img
+              src="/images/clouds/right-cloud.png"
+              class="loyalty__cloud fade-in"
             />
             <div class="loyalty__bottom">
               <h3 class="section-bottom-title">Every. Single. Year.</h3>
@@ -173,10 +177,9 @@
             <div class="costs__sub-heading fade-in">Insanely Low</div>
             <h2 class="costs__heading fade-in">Costs.</h2>
             <img
-              class="costs__image"
               src="/images/plane/03.png"
+              class="costs__image"
             />
-
             <div class="costs__bottom">
               <div class="costs__bottom-left">
                 <h3 class="section-bottom-title">Personal Discounts.</h3>
@@ -217,16 +220,16 @@
                 <span class="apply__title"> Apply in minutes. </span>
                 <button class="btn btn--gray">Learn more</button>
                 <img
-                  class="apply__first-plane non-select-image"
                   src="/images/plane/apply.png"
+                  class="apply__first-plane non-select-image"
                 />
               </div>
 
               <div class="apply__row">
                 <div class="apply__card apply__card--left">
                   <img
-                    class="apply__second-plane non-select-image"
                     src="/images/plane/apply-2.png"
+                    class="apply__second-plane non-select-image"
                   />
                   <div class="apply__title apply__title--light">
                     Backed by American's leading airlines.
